@@ -181,7 +181,7 @@ let infinity =
 let neg_infinity =
   float_of_bits 0xFF_F0_00_00_00_00_00_00L
 let nan =
-  float_of_bits 0x7F_F0_00_00_00_00_00_01L
+  float_of_bits 0x7F_F8_00_00_00_00_00_01L
 let max_float =
   float_of_bits 0x7F_EF_FF_FF_FF_FF_FF_FFL
 let min_float =
